# CMAT

./: .gitignore  README.md  TODO_industry_rebuild.md  constraints.txt  example.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cmat/: __init__.py  base.py  cache.py  config.py  scoring.py  ttv_sim.py  workflow.py
cmat/domain/: __init__.py  mass_limits.py  residuals.py  timing.py  units.py
cmat/plotting/: __init__.py  megno.py  score_surfaces.py
cmat/simulation/: __init__.py  execution.py  megno.py  rebound_ttv.py
data/WASP-44 b/: prop_data.csv  tc_data.csv
docs/: API_REFERENCE.md  BENCHMARKING.md  DATA_FORMATS.md  INSTALLATION.md  QUICKSTART.md  README.md  THEORY.md  TROUBLESHOOTING.md
docs/rebuild/: CURRENT_LIMITATIONS.md  ENVIRONMENT_BASELINE.md  HANDOFF.md  STAGE0_BASELINE.md  STAGE1_PACKAGING.md  STAGE1_PROJECT_STRUCTURE.md  WASP44_REDUCED_BENCHMARK.md
examples/: custom_scoring_backend.py  damped_oscillator_adapter.py  damped_oscillator_batch.py  synthetic_ttv_quickstart.ipynb  synthetic_ttv_quickstart.py
tests/: test_base_cache.py  test_cache.py  test_config.py  test_domain_mass_limits.py  test_domain_residuals.py  test_domain_timing.py  test_domain_units.py  test_notebook_smoke.py  test_package_import.py  test_plotting_megno.py  test_plotting_score_surfaces.py  test_simulation_execution.py  test_simulation_megno.py  test_simulation_rebound_ttv.py  test_ttv_rebound.py  test_ttv_residuals.py  test_ttv_scoring.py  test_wasp44_baseline_data.py  test_workflow.py
